# doc-inject

./: .coverage  .coveragerc  .editorconfig  .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml
doc_inject/: cli.py  config.py  config_loader.py  engine.py  template.py  types.py
doc_inject/parsers/: core.py  json.py  text.py  toml.py  yaml.py
docs/: configuration.md  demo.md
tests/: test_cli_strict_template.py  test_comment_styles.py  test_config_extraction.py  test_config_model.py  test_engine.py  test_engine_injection.py  test_extract_config_adoc.py  test_glob_dashboards.py  test_inject_glob.py  test_inject_toml.py  test_json_parser.py  test_relative_resolution.py  test_resolve_query.py  test_strict_template_resolution.py  test_structured_parsers.py  test_template_rendering.py  test_text_parser.py
