[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "doc-inject"
version = "0.1.0"
description = "Inject rendered content into documents from a single source of truth."
authors = [
    { name = "Jochen Preusche", email = "922226+iilei@users.noreply.github.com" },
]
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
dependencies = [
  "typer[all]>=0.15.2",
  "jinja2",
  "PyYAML>=6.0",
  "jsonpath-ng>=1.5.3",
  "tomli; python_version<'3.11'",
  "pydantic>=2.5.0",
  "json5>=0.9.0"
]


[project.optional-dependencies]
dev = [
  "pytest",
  "ruff",
  "pre-commit",
  "mypy",
  "types-PyYAML",
  "types-toml"
]

[project.scripts]
doc-inject = "doc_inject.cli:app"

[tool.hatch.envs.default]
dependencies = [
  "pytest",
  "ruff",
  "pre-commit",
]

[tool.hatch.envs.default.scripts]
test = "pytest"
lint = "ruff check ."
fmt = "ruff format ."
fix = "ruff check . --fix"
all = [
  "ruff format .",
  "ruff check . --fix"
]

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
